--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <h1>test</h1>
 
+<audio *ngIf="chime" controls autoplay>
+  <source src="../assets/chime.mp3" type="audio/mpeg" />
+  Your browser does not support the audio element.
+</audio>
+
 <circle-progress
   [percent]="(100 * (timerLength - elapsedTime)) / timerLength"
   [lazy]="false"
@@ -14,4 +19,4 @@
   placeholder="enter number"
 />
 <button (click)="start()">Start</button>
-<button>Stop</button>
+<button (click)="stop()">Stop</button>
