--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="progress-wrapper">
   <div class="time-label">
-    {{ msToTime(inputValue * 1000 * 60 - elapsedTime) }}
+    {{ msToTime(timeLeft) }}
   </div>
   <round-progress
-    [current]="inputValue * 1000 * 60 - elapsedTime"
+    [current]="this.timeLeft"
     [max]="inputValue * 1000 * 60"
     [color]="'#45ccce'"
     [background]="'#eaeaea'"
@@ -17,6 +17,7 @@
 <div class="buttons">
   <p>inputvalue is {{ inputValue }}</p>
   <p>elapsedTime is {{ elapsedTime }}</p>
+  <p>elapsedTime is {{ timeLeft }}</p>
 
   <input
     [ngModel]="inputValue"
