removed debugging logs & added margin to buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,17 +16,13 @@
 </div>
 
 <div class="buttons">
-  <p>inputvalue is {{ inputValue }}</p>
-  <p>elapsedTime is {{ elapsedTime }}</p>
-  <p>elapsedTime is {{ elapsedTime }}</p>
-
   <input
     [ngModel]="inputValue"
     (change)="changeInput($event)"
     type="number"
     placeholder="enter number of minutes"
   />
-  <button [disabled]="isStarted || inputValue < 0" (click)="start()">
+  <button [disabled]="isStarted || inputValue <= 0" (click)="start()">
     Start
   </button>
   <button [disabled]="!isStarted" (click)="stop()">Stop</button>
