--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,6 +25,11 @@ round-progress {
   text-align: center;
 }
 
+button {
+  display: block;
+  margin: 0 auto;
+}
+
 input {
   display: block;
   margin: 0 auto;
