--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
 <div class="buttons">
   <input
     [ngModel]="inputValue"
-    (change)="changeInput($event)"
+    (keyup)="changeInput($event)"
     type="number"
     placeholder="enter number of minutes"
   />
